--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | KANZIMA COUTURE</title>
-    
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lato:wght@300;400&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
     <header></header>
 
-    <div class="container">
-        <h1 style="color: var(--primary-gold); font-family: 'Cinzel', serif;">Welcome to Kanzima Couture</h1>
-        <p>Experience the luxury of hand-woven Zari work.</p>
-        </div>
+    <div class="container hero-section">
+        <h1 style="color: var(--primary-gold); font-family: 'Cinzel', serif;">Kanzima Couture</h1>
+        <p>Where Hand Zari Work Meets Modern Elegance.</p>
+        <br>
+        <a href="gallery.html" class="cta-button" style="border: 1px solid #C5A059; padding: 10px 20px; color: #C5A059; text-decoration: none;">View Collection</a>
+    </div>
 
     <footer></footer>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
