--- a/pages/banner.html
+++ b/pages/banner.html
@@ -33,5 +33,17 @@
                 <p>Where Tradition meets Perfection</p>
             </div>
         </div>
+        <div class="slide" style="background-image: url('images/banner-6.jpg');">
+            <div class="hero-content">
+                <h1>Artistry in Motion</h1>
+                <p>Celebrating the Craft of India</p>
+            </div>
+        </div>
+        <div class="slide" style="background-image: url('images/banner-7.jpg');">
+            <div class="hero-content">
+                <h1>Forever Classic</h1>
+                <p>Style that transcends Time</p>
+            </div>
+        </div>
     </div>
 </div>
