--- a/pages/header.html
+++ b/pages/header.html
@@ -1,5 +1,5 @@
 <div class="logo">
-    <span class="logo-k">K</span>
+    <img src="images/logo.png" alt="Kanzima Logo" style="height: 50px; width: auto; margin-right: 15px;">
     <span>Kanzima<br><small style="font-size:0.5em; letter-spacing:3px;">COUTURE</small></span>
 </div>
 <nav>
