--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,1 +1,4 @@
+<div style="text-align: center; padding-bottom: 20px;">
+    <img src="images/logo.png" alt="Kanzima Logo" style="height: 40px; width: auto; opacity: 0.7;">
+</div>
 <p>&copy; 2026 KANZIMA COUTURE. Handcrafted Elegance.</p>
