--- a/pages/header.html
+++ b/pages/header.html
@@ -1,7 +1,14 @@
-<div class="logo">
+<a href="index.html" class="logo" style="text-decoration: none; cursor: pointer;">
+    
     <img src="images/logo.png" alt="Kanzima Logo" style="height: 50px; width: auto; margin-right: 15px;">
-    <span>Kanzima<br><small style="font-size:0.5em; letter-spacing:3px;">COUTURE</small></span>
-</div>
+    
+    <span>
+        Kanzima<br>
+        <small style="font-size:0.5em; letter-spacing:3px;">COUTURE</small>
+    </span>
+
+</a>
+
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
