--- a/pages/header.html
+++ b/pages/header.html
@@ -12,6 +12,7 @@
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="process.html">The Process</a></li> 
         <li><a href="gallery.html">Collection</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
