--- a/contact.html
+++ b/contact.html
@@ -16,33 +16,31 @@
 
     <header></header> <img src="images/thread-needle.gif" class="floating-needle" alt="Sewing Animation">
 
-    <div class="page-header" style="background-image: url('images/banner-1.jpg'); height: 40vh;">
+    <div class="page-header" style="background-image: url('images/banner-3.jpg'); height: 50vh;">
         <div class="hero-overlay"></div>
         <div style="position: relative; z-index: 2;">
-            <h1 data-aos="fade-down">Visit Our Atelier</h1>
+            <h1 data-aos="fade-down" style="font-size: 3.5rem;">Visit Our Atelier</h1>
             <div class="gold-line"></div>
-            <p data-aos="fade-up">We are waiting to craft your dreams.</p>
+            <p data-aos="fade-up" style="letter-spacing: 5px;">CRAFTING YOUR DREAMS</p>
         </div>
     </div>
 
-    <div class="content-section">
-        <div class="grid-2">
-            
-            <div class="card" data-aos="fade-right">
+    <div class="content-section" style="padding-top: 50px;">
+        <div class="grid-2" style="align-items: stretch;"> <div class="card" data-aos="fade-right" style="margin: 0; height: 100%; display: flex; flex-direction: column; justify-content: center;">
                 <div class="corner top left"></div>
                 <div class="corner top right"></div>
                 <div class="corner bottom left"></div>
                 <div class="corner bottom right"></div>
 
-                <h2>Get in Touch</h2>
+                <h2 style="margin-top: 0;">Get in Touch</h2>
                 <div class="card-divider"></div>
 
-                <div style="text-align: left; padding: 0 10px;">
-                    <div style="margin-bottom: 25px; display: flex; gap: 15px;">
-                        <i class="fas fa-map-marker-alt" style="color:#C5A059; font-size: 1.2rem; margin-top: 5px;"></i>
+                <div style="text-align: left; padding: 0 15px;">
+                    <div style="margin-bottom: 30px; display: flex; gap: 15px;">
+                        <i class="fas fa-map-marker-alt" style="color:#C5A059; font-size: 1.4rem; margin-top: 5px;"></i>
                         <div>
-                            <strong style="color: #C5A059; font-family: 'Cinzel', serif;">Address:</strong><br>
-                            <span style="color: #E6DCCA;">
+                            <strong style="color: #C5A059; font-family: 'Cinzel', serif; font-size: 1.1rem;">Address:</strong><br>
+                            <span style="color: #E6DCCA; font-size: 1rem;">
                                 52, Mirza Ghalib Rd,<br>
                                 SultanPur Bhawa, Malviyanagar,<br>
                                 Prayagraj, Uttar Pradesh 211003
@@ -50,41 +48,46 @@
                         </div>
                     </div>
 
-                    <div style="margin-bottom: 25px; display: flex; gap: 15px;">
-                        <i class="fas fa-phone-alt" style="color:#C5A059; font-size: 1.2rem; margin-top: 5px;"></i>
+                    <div style="margin-bottom: 30px; display: flex; gap: 15px;">
+                        <i class="fas fa-phone-alt" style="color:#C5A059; font-size: 1.4rem; margin-top: 5px;"></i>
                         <div>
-                            <strong style="color: #C5A059; font-family: 'Cinzel', serif;">Phone:</strong><br>
-                            <a href="https://wa.me/919307159339" target="_blank" style="color: #fff; text-decoration: underline;">
+                            <strong style="color: #C5A059; font-family: 'Cinzel', serif; font-size: 1.1rem;">Phone:</strong><br>
+                            <a href="https://wa.me/919307159339" target="_blank" style="color: #fff; text-decoration: none; border-bottom: 1px dotted #C5A059;">
                                 +91 9307159339
                             </a>
                         </div>
                     </div>
 
-                    <div style="display: flex; gap: 15px;">
-                        <i class="fas fa-envelope" style="color:#C5A059; font-size: 1.2rem; margin-top: 5px;"></i>
+                    <div style="margin-bottom: 30px; display: flex; gap: 15px;">
+                        <i class="fas fa-envelope" style="color:#C5A059; font-size: 1.4rem; margin-top: 5px;"></i>
                         <div>
-                            <strong style="color: #C5A059; font-family: 'Cinzel', serif;">Email:</strong><br>
+                            <strong style="color: #C5A059; font-family: 'Cinzel', serif; font-size: 1.1rem;">Email:</strong><br>
                             <span style="color: #E6DCCA;">contact@kanzima.com</span>
                         </div>
                     </div>
                 </div>
-
-                <br><br>
                 
-                <a href="https://wa.me/919307159339" target="_blank" style="text-decoration: none;">
-                    <button class="art-deco-btn">
-                        <span class="left"></span>
-                        Chat on WhatsApp
-                        <span class="right"></span>
-                    </button>
-                </a>
+                <div style="margin-top: auto; padding-top: 20px;">
+                    <a href="https://wa.me/919307159339" target="_blank" style="text-decoration: none;">
+                        <button class="art-deco-btn">
+                            <span class="left"></span>
+                            Chat on WhatsApp
+                            <span class="right"></span>
+                        </button>
+                    </a>
+                </div>
             </div>
 
-            <div class="map-container" data-aos="fade-left">
+            <div class="card map-card" data-aos="fade-left" style="margin: 0; padding: 0; height: 100%; min-height: 500px; overflow: hidden;">
+                <div class="corner top left"></div>
+                <div class="corner top right"></div>
+                <div class="corner bottom left"></div>
+                <div class="corner bottom right"></div>
+
                 <iframe 
                     width="100%" 
-                    height="500" 
-                    style="border: 1px solid #C5A059; filter: grayscale(100%) invert(92%) contrast(83%);" 
+                    height="100%" 
+                    style="border: 0; filter: grayscale(100%) invert(92%) contrast(83%); opacity: 0.8;" 
                     allowfullscreen="" 
                     loading="lazy" 
                     referrerpolicy="no-referrer-when-downgrade"
