--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                 <div style="text-align: center;">
                     <i class="fas fa-envelope" style="color:#C5A059; font-size: 2rem; margin-bottom: 10px;"></i>
                     <p style="margin: 0; font-size: 1.1rem; color: #fff;">
-                        contact@kanzima.com
+                        contact@kanzimacouture.com
                     </p>
                 </div>
             </div>
