--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,7 @@
 </head>
 <body>
 
-    <header></header> 
-
-    <img src="images/thread-needle.gif" class="floating-needle" alt="Sewing Animation">
+    <header></header> <img src="images/thread-needle.gif" class="floating-needle" alt="Sewing Animation">
 
     <div class="map-hero" data-aos="fade-in" data-aos-duration="1500">
         
