--- a/pages/header.html
+++ b/pages/header.html
@@ -1,19 +1,16 @@
 <a href="index.html" class="logo" style="text-decoration: none; cursor: pointer;">
-    
     <img src="images/logo.png" alt="Kanzima Logo" style="height: 50px; width: auto; margin-right: 15px;">
-    
     <span>
         Kanzima<br>
         <small style="font-size:0.5em; letter-spacing:3px;">COUTURE</small>
     </span>
-
 </a>
 
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="process.html">The Process</a></li> 
-        <li><a href="gallery.html">Collection</a></li>
+        <li><a href="process.html">Process</a></li> 
+        <li><a href="services.html">Services</a></li> <li><a href="about.html">About</a></li>       <li><a href="gallery.html">Collection</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
