--- a/process.html
+++ b/process.html
@@ -8,25 +8,105 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/gallery-style.css"> </head>
+    <link rel="stylesheet" href="css/gallery-style.css">
+</head>
 <body>
     <header></header>
     
-    <div class="gallery-hero" style="background-image: url('images/process-3.jpg');">
+    <div class="gallery-hero" style="background-image: url('images/process-hero.jpg');">
         <div class="hero-overlay"></div>
         <div class="hero-text" data-aos="zoom-out">
-            <h1>...</h1>
+            <h1>The Journey</h1>
             <div class="gold-line"></div>
-            <p></p>
+            <p>From Imagination to Reality</p>
         </div>
     </div>
 
-    <div id="process-dynamic-container"></div>
+    <div class="story-text" style="text-align:center; margin: 80px 0;">
+        <p class="reveal-line" style="font-size:1.4rem; color:#E6DCCA; margin-bottom:15px; opacity: 1;">Every masterpiece begins with a thought.</p>
+        <p class="reveal-line" style="font-size:1.4rem; color:#E6DCCA; margin-bottom:15px; opacity: 1;">A line drawn on paper.</p>
+        <p class="reveal-line" style="font-size:1.4rem; color:#E6DCCA; margin-bottom:15px; opacity: 1;">A budget respected.</p>
+        <p class="reveal-line" style="font-size:1.4rem; color:#E6DCCA; margin-bottom:15px; opacity: 1;">This is how we craft your legacy.</p>
+    </div>
+
+    <div class="content-section">
+        <div class="grid-2" style="margin-bottom: 120px; align-items:center;" data-aos="fade-right">
+            <div>
+                <h1 style="color:#C5A059; font-size:5rem; opacity:0.3; margin-bottom: -20px;">01</h1>
+                <h2 style="font-family: 'Cinzel', serif; font-size: 2rem; margin-bottom: 20px;">Consultation & Budget</h2>
+                <p style="font-size:1.1rem; color:#ccc;">Unlike others, we start with your range. Whether you need a simple elegant finish or a heavy royal bridal look, we plan the materials to fit your budget first.</p>
+            </div>
+            <div class="image-wrapper" style="position:relative;">
+                <div class="corner top left"></div>
+                <div class="corner bottom right"></div>
+                <img src="images/process-1.jpg" alt="Consultation" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
+            </div>
+        </div>
+    </div>
+
+    <div class="content-section">
+        <div class="grid-2 swap-desktop" style="margin-bottom: 120px; align-items:center;" data-aos="fade-left">
+            <div>
+                <h1 style="color:#C5A059; font-size:5rem; opacity:0.3; margin-bottom: -20px;">02</h1>
+                <h2 style="font-family: 'Cinzel', serif; font-size: 2rem; margin-bottom: 20px;">The Khaka (Blueprint)</h2>
+                <p style="font-size:1.1rem; color:#ccc;">Before a single stitch is made, the design is born on paper. This is the 'Khaka'—the soul of the dress. We draft intricate patterns that trace the flow of the embroidery.</p>
+            </div>
+            <div class="image-wrapper" style="position:relative;">
+                <div class="corner top left"></div>
+                <div class="corner bottom right"></div>
+                <img src="images/process-1-khaka-1.jpg" alt="Khaka" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
+            </div>
+        </div>
+    </div>
+
+    <div class="content-section">
+        <div class="grid-2" style="margin-bottom: 120px; align-items:center;" data-aos="fade-right">
+            <div>
+                <h1 style="color:#C5A059; font-size:5rem; opacity:0.3; margin-bottom: -20px;">03</h1>
+                <h2 style="font-family: 'Cinzel', serif; font-size: 2rem; margin-bottom: 20px;">The Tracing</h2>
+                <p style="font-size:1.1rem; color:#ccc;">The design is transferred onto the fabric using traditional methods. We select the finest silks and velvets, ensuring the foundation is as royal as the embroidery itself.</p>
+            </div>
+            <div class="image-wrapper" style="position:relative;">
+                <div class="corner top left"></div>
+                <div class="corner bottom right"></div>
+                <img src="images/process-2-1.jpg" alt="Tracing" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
+            </div>
+        </div>
+    </div>
+
+    <div class="content-section">
+        <div class="grid-2 swap-desktop" style="margin-bottom: 120px; align-items:center;" data-aos="fade-left">
+            <div>
+                <h1 style="color:#C5A059; font-size:5rem; opacity:0.3; margin-bottom: -20px;">04</h1>
+                <h2 style="font-family: 'Cinzel', serif; font-size: 2rem; margin-bottom: 20px;">The Golden Stitch</h2>
+                <p style="font-size:1.1rem; color:#ccc;">The fabric is mounted on the 'Adda' (wooden frame). Our master Karigars begin the painstaking work of Zardozi, adding gold wires, pearls, and sequins stitch by stitch.</p>
+            </div>
+            <div class="image-wrapper" style="position:relative;">
+                <div class="corner top left"></div>
+                <div class="corner bottom right"></div>
+                <img src="images/process-3.jpg" alt="Zardozi Work" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
+            </div>
+        </div>
+    </div>
+
+    <div class="content-section">
+        <div class="grid-2" style="margin-bottom: 120px; align-items:center;" data-aos="fade-right">
+            <div>
+                <h1 style="color:#C5A059; font-size:5rem; opacity:0.3; margin-bottom: -20px;">05</h1>
+                <h2 style="font-family: 'Cinzel', serif; font-size: 2rem; margin-bottom: 20px;">The Grand Reveal</h2>
+                <p style="font-size:1.1rem; color:#ccc;">The pieces are stitched together, lined with comfort, and fitted to perfection. The result is not just a dress, but a piece of art ready for your special day.</p>
+            </div>
+            <div class="image-wrapper" style="position:relative;">
+                <div class="corner top left"></div>
+                <div class="corner bottom right"></div>
+                <img src="images/banner-4.jpg" alt="Final Reveal" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
+            </div>
+        </div>
+    </div>
 
     <footer></footer>
 
     <script src="js/main.js"></script>
-    <script src="js/content-loader.js"></script> 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>AOS.init();</script>
 </body>
