--- a/pages/banner.html
+++ b/pages/banner.html
@@ -45,5 +45,11 @@
                 <p>Style that transcends Time</p>
             </div>
         </div>
+        <div class="slide" style="background-image: url('images/banner-8.jpg');">
+            <div class="hero-content">
+                <h1>Heirloom Quality</h1>
+                <p>Crafted to be cherished for Generations</p>
+            </div>
+        </div>
     </div>
 </div>
