--- a/process.html
+++ b/process.html
@@ -33,13 +33,13 @@
         <div class="grid-2" style="margin-bottom: 120px; align-items:center;" data-aos="fade-right">
             <div>
                 <h1 style="color:#C5A059; font-size:5rem; opacity:0.3; margin-bottom: -20px;">01</h1>
-                <h2 style="font-family: 'Cinzel', serif; font-size: 2rem; margin-bottom: 20px;">Consultation & Budget</h2>
-                <p style="font-size:1.1rem; color:#ccc;">Unlike others, we start with your range. Whether you need a simple elegant finish or a heavy royal bridal look, we plan the materials to fit your budget first.</p>
+                <h2 style="font-family: 'Cinzel', serif; font-size: 2rem; margin-bottom: 20px;">The Khaka (Blueprint)</h2>
+                <p style="font-size:1.1rem; color:#ccc;">Before a single stitch is made, the design is born on paper. This is the 'Khaka'—the soul of the dress. We draft intricate patterns that trace the flow of the embroidery.</p>
             </div>
             <div class="image-wrapper" style="position:relative;">
                 <div class="corner top left"></div>
                 <div class="corner bottom right"></div>
-                <img src="images/process-1.jpg" alt="Consultation" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
+                <img src="images/process-1-khaka-1.jpg" alt="Khaka Sketch" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
             </div>
         </div>
     </div>
@@ -48,13 +48,13 @@
         <div class="grid-2 swap-desktop" style="margin-bottom: 120px; align-items:center;" data-aos="fade-left">
             <div>
                 <h1 style="color:#C5A059; font-size:5rem; opacity:0.3; margin-bottom: -20px;">02</h1>
-                <h2 style="font-family: 'Cinzel', serif; font-size: 2rem; margin-bottom: 20px;">The Khaka (Blueprint)</h2>
-                <p style="font-size:1.1rem; color:#ccc;">Before a single stitch is made, the design is born on paper. This is the 'Khaka'—the soul of the dress. We draft intricate patterns that trace the flow of the embroidery.</p>
+                <h2 style="font-family: 'Cinzel', serif; font-size: 2rem; margin-bottom: 20px;">The Tracing</h2>
+                <p style="font-size:1.1rem; color:#ccc;">The design is transferred onto the fabric using traditional methods. We select the finest silks and velvets, ensuring the foundation is as royal as the embroidery itself.</p>
             </div>
             <div class="image-wrapper" style="position:relative;">
                 <div class="corner top left"></div>
                 <div class="corner bottom right"></div>
-                <img src="images/process-1-khaka-1.jpg" alt="Khaka" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
+                <img src="images/process-1-khaka-2.jpg" alt="Tracing Detail" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
             </div>
         </div>
     </div>
@@ -63,13 +63,13 @@
         <div class="grid-2" style="margin-bottom: 120px; align-items:center;" data-aos="fade-right">
             <div>
                 <h1 style="color:#C5A059; font-size:5rem; opacity:0.3; margin-bottom: -20px;">03</h1>
-                <h2 style="font-family: 'Cinzel', serif; font-size: 2rem; margin-bottom: 20px;">The Tracing</h2>
-                <p style="font-size:1.1rem; color:#ccc;">The design is transferred onto the fabric using traditional methods. We select the finest silks and velvets, ensuring the foundation is as royal as the embroidery itself.</p>
+                <h2 style="font-family: 'Cinzel', serif; font-size: 2rem; margin-bottom: 20px;">Material Selection</h2>
+                <p style="font-size:1.1rem; color:#ccc;">We handpick every bead, sequin, and thread. Whether it's authentic Zardozi or modern crystals, we ensure the materials match your vision and budget.</p>
             </div>
             <div class="image-wrapper" style="position:relative;">
                 <div class="corner top left"></div>
                 <div class="corner bottom right"></div>
-                <img src="images/process-2-1.jpg" alt="Tracing" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
+                <img src="images/process-2.jpg" alt="Materials" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
             </div>
         </div>
     </div>
@@ -84,7 +84,7 @@
             <div class="image-wrapper" style="position:relative;">
                 <div class="corner top left"></div>
                 <div class="corner bottom right"></div>
-                <img src="images/process-3.jpg" alt="Zardozi Work" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
+                <img src="images/process-4.jpg" alt="Hand Embroidery" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
             </div>
         </div>
     </div>
@@ -99,7 +99,7 @@
             <div class="image-wrapper" style="position:relative;">
                 <div class="corner top left"></div>
                 <div class="corner bottom right"></div>
-                <img src="images/banner-4.jpg" alt="Final Reveal" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
+                <img src="images/process-5.jpg" alt="Final Reveal" style="width:100%; height:400px; object-fit:cover; border:1px solid #C5A059;">
             </div>
         </div>
     </div>
