--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body style="overflow-x: hidden;">
+    <div class="cursor-dot"></div>
+    <div class="cursor-outline"></div>
 
     <div id="preloader">
         <svg class="needle-svg" viewBox="0 0 24 100" fill="none" stroke="#C5A059" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
