--- a/pages/header.html
+++ b/pages/header.html
@@ -1,16 +1,23 @@
-<a href="index.html" class="logo" style="text-decoration: none; cursor: pointer;">
-    <img src="images/logo.png" alt="Kanzima Logo" style="height: 50px; width: auto; margin-right: 15px;">
-    <span>
-        Kanzima<br>
-        <small style="font-size:0.5em; letter-spacing:3px;">COUTURE</small>
-    </span>
-</a>
+<div class="logo-container">
+    <a href="index.html">
+        <img src="images/logo.png" alt="Kanzima Logo" class="logo-img">
+    </a>
+
+    <a href="index.html" class="logo-text-group">
+        <span class="logo-text" style="font-size: 1.2rem; font-weight: 700;">Kanzima</span>
+        <small style="font-size:0.5em; letter-spacing:3px; color:#E6DCCA;">COUTURE</small>
+    </a>
+
+    <img src="images/thread-needle.gif" class="logo-gif" alt="Needle Animation">
+</div>
 
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="process.html">Process</a></li> 
-        <li><a href="services.html">Services</a></li> <li><a href="about.html">About</a></li>       <li><a href="gallery.html">Collection</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="gallery.html">Collection</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
