--- a/pages/banner.html
+++ b/pages/banner.html
@@ -1,5 +1,7 @@
 <div class="hero-wrapper">
     
+    <div id="particles-js"></div>
+
     <div class="slider">
         
         <div class="slide active">
