--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
                 Using authentic gold and silver threads, we craft heirlooms, not just garments.
             </p>
 
-            <a href="process.html" style="text-decoration: none;">
-                <button class="art-deco-btn">
-                    <span class="left"></span>
-                    Discover More
-                    <span class="right"></span>
-                </button>
+            <a href="process.html" class="art-deco-btn">
+                <span class="left"></span>
+                Discover More
+                <span class="right"></span>
             </a>
         </div>
     </section>
@@ -69,12 +67,10 @@
                     where the needle dances to create intricate floral and paisley motifs.
                 </p>
 
-                <a href="process.html" style="text-decoration: none;">
-                    <button class="art-deco-btn">
-                        <span class="left"></span>
-                        View Process
-                        <span class="right"></span>
-                    </button>
+                <a href="process.html" class="art-deco-btn">
+                    <span class="left"></span>
+                    View Process
+                    <span class="right"></span>
                 </a>
             </div>
             
@@ -113,19 +109,7 @@
     <script src="js/particles-config.js"></script>
     
     <script>
-        // Initialize Animations
         AOS.init();
-
-        // Preloader Logic (Cleaned - Thread Logic Removed)
-        document.addEventListener("DOMContentLoaded", function() {
-            const preloader = document.getElementById("preloader");
-            window.addEventListener("load", function() {
-                setTimeout(() => {
-                    preloader.style.opacity = "0";
-                    setTimeout(() => { preloader.style.display = "none"; }, 500);
-                }, 1000);
-            });
-        });
     </script>
 </body>
 </html>
