--- a/pages/header.html
+++ b/pages/header.html
@@ -11,7 +11,13 @@
     <img src="images/thread-needle.gif" class="logo-gif" alt="Needle Animation">
 </div>
 
-<nav>
+<div class="hamburger">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+</div>
+
+<nav class="nav-menu">
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="process.html">Process</a></li> 
