--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
     <div id="custom-hero-container"></div>
 
-    <div class="map-hero" data-aos="fade-in" data-aos-duration="1500">
+   <!-- <div class="map-hero" data-aos="fade-in" data-aos-duration="1500">
         <iframe 
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d225.19716603724996!2d81.82322835857644!3d25.433092501921717!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3985352a96eaff61%3A0x7f89210f866fd8c4!2sMasood%20Embroidery%20Boutique!5e0!3m2!1sen!2sin!4v1770572014544!5m2!1sen!2sin" 
             allowfullscreen="" 
@@ -28,7 +28,7 @@
             referrerpolicy="no-referrer-when-downgrade">
         </iframe>
         <a href="https://www.google.com/maps/search/?api=1&query=52+Mirza+Ghalib+Rd+Prayagraj" target="_blank" class="map-link-overlay"></a>
-    </div>
+    </div>-->
 
     <div class="contact-overlay-container">
         <div class="royal-card" data-aos="fade-up" data-aos-duration="1500">
