--- a/pages/custom-banner.html
+++ b/pages/custom-banner.html
@@ -12,7 +12,7 @@
             <img src="imganimate/logo-dress-k.png" alt="Kanzima Dress Logo" class="dress-logo animate-spin-logo">
         </div>
 
-        <h1 class="brand-calligraphy animate-fade-in">KANZIMA COUTURE</h1>
+        <h1 class="brand-calligraphy animate-fade-in">KANZIMA<br>COUTURE</h1>
 
         <div class="qr-frame-container">
             <img src="imganimate/top-left-angle.png" class="angle-icon top-left animate-angle-top" alt="Corner">
