--- a/pages/header.html
+++ b/pages/header.html
@@ -1,30 +1,29 @@
-<nav>
-    <div class="logo-container">
-        <a href="index.html">
-            <img src="images/logo-dress-k.png" alt="Kanzima Logo" class="logo-img">
-        </a>
+<div class="logo-container">
+    <a href="index.html">
+        <img src="images/logo-dress-k.png" alt="Kanzima Logo" class="logo-img">
+    </a>
 
-        <div class="logo-text-group">
-            <a href="index.html" class="logo-text" style="line-height: 1.2;">KANZIMA<br><span style="font-size: 0.8em; letter-spacing: 3px;">COUTURE</span></a>
-        </div>
+    <a href="index.html" class="logo-text-group">
+        <span class="logo-text" style="font-size: 1.2rem; font-weight: 700;">Kanzima</span>
+        <small style="font-size:0.5em; letter-spacing:3px; color:#E6DCCA;">COUTURE</small>
+    </a>
 
-        <img src="images/thread-needle.gif" alt="Sewing Needle" class="header-needle-gif">
-    </div>
+    <img src="images/thread-needle.gif" class="header-needle-gif" alt="Needle Animation">
+</div>
 
-    <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-    </div>
+<div class="hamburger">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+</div>
 
-    <div class="nav-menu">
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="process.html">PROCESS</a></li>
-            <li><a href="gallery.html">GALLERY</a></li>
-            <li><a href="services.html">SERVICES</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-        </ul>
-    </div>
+<nav class="nav-menu">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="process.html">Process</a></li> 
+        <li><a href="services.html">Services</a></li>
+        <li><a href="gallery.html">Collection</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="about.html">About</a></li>
+    </ul>
 </nav>
