--- a/pages/header.html
+++ b/pages/header.html
@@ -1,6 +1,6 @@
 <div class="logo-container">
     <a href="index.html">
-        <img src="images/logo-dress-k.png" alt="Kanzima Logo" class="logo-img">
+        <img src="images/logo.png" alt="Kanzima Logo" class="logo-img">
     </a>
 
     <a href="index.html" class="logo-text-group">
